--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ body {
   grid-row-start: 2;
   grid-row-end: -1;
   margin-left: 2rem;
+  max-width: 50vw;
 }
 .about__greeting, .about__skills-heading {
   font-family: "Istok Web";
